--- a/templates/front.html
+++ b/templates/front.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Find Gurudev</title>
+<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <style>
   body {
     font-family: 'Arial', sans-serif;
@@ -22,7 +23,6 @@
     text-align: center;
   }
   .location {
-    /*width: 80vw;*/
     font-size: 4rem;
     word-wrap: break-word;
     text-align: center;
