--- a/templates/refreshed-main.html
+++ b/templates/refreshed-main.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Discover Gurudev Sri Sri Ravi Shankar's current and upcoming visits. Stay connected with Gurudev's journey and teachings.">
         <title>Find Gurudev - Know where is Gurudev right now!</title>
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='tailwind.css') }}">
@@ -28,7 +29,7 @@
 
                 <div class="text-center">
                     <div class="flex justify-center mb-4">
-                        <img src="{{ url_for('static', filename='gurudev.png') }}" alt="Image" class="w-1/4">
+                        <img src="{{ url_for('static', filename='gurudev.png') }}" alt="Gurudev Sri Sri Ravi Shankar" class="w-1/4">
                     </div>
 
                     <p style="color: rgb(47, 77, 70);" class="font-normal text-md md:text-xl mb-4">
@@ -129,12 +130,12 @@
                         </div>
 
                         <div class="flex space-x-6">
-                            <h1 class="font-normal text-gray-700 text-3xl md:text-4xl">03-03-2024</h1>
+                            <h1 class="font-normal text-gray-700 text-3xl md:text-4xl">03-10-2024</h1>
 
                             <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
 
                             <div>
-                                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">United States</h1>
+                                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Bengaluru, Karnataka, India</h1>
 
                                 <p class="font-normal text-gray-500 text-sm md:text-base">Art of Living International Center, 21st km Kanakapura Road, Udaypura, Bengaluru, Karnataka, India</p>
                             </div>
